# QmlScrcpy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.output/x64/Debug/config/: userdata.ini
LogoRenderer/: fboinsgrenderer.cpp  logorenderer.h
LogoRenderer/qml/: ali.qml  ali.qmlc  main.qml  main.qmlc
QtScrcpyCore/: CMakeLists.txt
QtScrcpyCore/src/adb/: adbprocessimpl.cpp
QtScrcpyCore/src/device/: device.cpp  device.h
QtScrcpyCore/src/device/decoder/: decoder.h
QtScrcpyCore/src/device/server/: server.cpp
QtScrcpyCore/src/devicemanage/: devicemanage.cpp
QtWs2022/qml/: Component.js  Component.jsc  SeparateWindow.qml  SeparateWindow.qmlc  app.qml  app.qmlc  app2.qml  app2.qmlc  main.qml  main.qmlc
QtWs2022/qml/components/: Icon.qml  Icon.qmlc  Music.qml  Ring.qml  Ring.qmlc  ToolBar.qml  ToolBar.qmlc
QtWs2022/scene/: MainWindow.cpp  MainWindow.h  PieChart.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h
QtWs2022/sceneprovider/: SceneProvider.cpp  SceneProvider.h  SceneProviderRenderer.cpp  SceneProviderRenderer.h
QtWs2022/service/: ResourceService.cpp  ResourceService.h  ServiceManager.cpp  ServiceManager.h
audio/: audiooutput.cpp
core/: CMakeLists.txt
core/include/: QtScrcpyCore.h  QtScrcpyCoreDef.h
core/src/device/: device.cpp  device.h
core/src/device/android/: input.h  keycodes.h
core/src/device/decoder/: decoder.cpp
core/src/device/server/: server.h
core/src/device/websocket/: echoserver.cpp  echoserver.h  websocket.h
core/src/devicemanage/: devicemanage.cpp  devicemanage.h
groupcontroller/: groupcontroller.cpp  groupcontroller.h
qml/: main.qml  main.qmlc
render/: OpenGLWindow.cpp  OpenGLWindow.h  TriangleWindow.cpp  TriangleWindow.h  main.qml  main.qmlc  qyuvopenglwidget.cpp  qyuvopenglwidget.h  squircle.fsh  squircle.vsh
res/: res.qrc
res/opengl/: squircle.fsh
res/qml/: Component.js  main.qml
res/qml/components/: CustomAppIcon.qml  Icon.qml  IconApp.qml  MirrorApp.qml  Music.qml  Ring.qml  ToolBar.qml  ToolBarApps.qml  ToolBarLeft.qml  ToolBarMirror.qml
service/: ResourceService.cpp  ResourceService.h  WebSocketService.cpp
squircle/: Squircle.cpp  Squircle.h  SquircleRenderer.cpp  SquircleRenderer.h
ui/: dialog.cpp  dialog.h  dialog.ui  toolform.h  videoform.cpp  videoform.h
ui/main/: MainWindow.cpp  MainWindow.h
ui/mirror/: MirrorRenderer.cpp  MirrorRenderer.h  MirrorScene.cpp  MirrorScene.h
ui/render/: OpenGLWindow.h  TriangleWindow.cpp  TriangleWindow.h  qyuvopenglwidget.cpp
ui/render/LogoRenderer/: fboinsgrenderer.h  logorenderer.cpp
ui/render/LogoRenderer/qml/: custom.scxml
ui/scene/: MainWindow.cpp  MainWindow.h  PieChart.cpp  PieChart.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h
ui/sceneprovider/: SceneProvider.cpp  SceneProvider.h  SceneProviderRenderer.cpp  SceneProviderRenderer.h
ui/service/: ResourceService.cpp  ResourceService.h  ServiceManager.h  WebSocketService.cpp  WebSocketService.h
ui/service/include/: server.h
ui/service/models/: Mirror.h
ui/service/udp/: Broadcast.cpp  Broadcast.h
ui/service/websocket/: State.cpp  State.h  websocket.cpp  websocket.h
ui/toolform/: toolform.cpp  toolform.h
ui/util/: config.cpp  config.h
util/: config.cpp  config.h
util/mousetap/: mousetap.cpp
